<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FAF6F6"
    android:padding="10sp"
    >

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:src="@drawable/baseline_restaurant_menu_24"
        android:paddingTop="50sp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt_desk"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:hint="@string/edt_desk"
        android:textColorHint="@color/black"
        android:inputType="number"
        android:paddingTop="80sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />

    <EditText
        android:id="@+id/edt_passw"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:hint="@string/edt_passw"
        android:textColorHint="@color/black"
        android:paddingTop="80sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_desk" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:layout_marginTop="40sp"
        android:text="@string/btn_Login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_passw" />

    <TextView
        android:id="@+id/txt_lostPassw"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:text="@string/txt_lostPassw"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Login" />

    <TextView
        android:id="@+id/txt_newDesk"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:text="@string/txt_newDesk"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_lostPassw" />
</androidx.constraintlayout.widget.ConstraintLayout>